# coronastatus

./: .gitignore  LICENSE  README.md
.github/workflows/: update_data.yml
analysis/: pyproject.toml
analysis/analysis/: analysis.ipynb  data_cleaning.ipynb  iso_alpha.csv  plots.py  scrape_and_clean.py  scraper.ipynb  stats.py  utils.py
analysis/analysis/datasets/: confirmed.csv  confirmed_transposed.csv  corona_data.csv  deaths.csv  deaths_transposed.csv  recovered.csv  recovered_transposed.csv
frontend/: package-lock.json  package.json  tsconfig.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/assets/: simple-grid.scss
frontend/src/components/: DataElement.vue  Disqus.vue  Footer.vue  Tooltip.vue
frontend/src/data/: Data.ts  data.json
frontend/src/plots/: test_corona.json
frontend/src/posts/: about.md  daily_change.md  daily_change2.md  info1.md  info2.md  info3.md  info4.md  info5.md  peak.md  top_daily.md
frontend/src/utils/: plotting.ts
frontend/src/views/: About.vue  Home.vue
