[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["Joachim Holwech <joachim.holwech@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.1"
pandas = "^1.0.1"
plotly = "^4.5.4"
jupyterlab = "^2.0.1"
requests = "^2.23.0"
matplotlib = "^3.2.0"
jupyter_contrib_nbextensions = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
